[package]
name = "mij"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.10"
